# hdd

./: .gitignore  CMakeLists.txt  hddApi.hpp  hddConf.json  main.cpp
include/: data.hpp  directSolver.hpp  domain.hpp  element.hpp  hddTime.hpp  hmpi.hpp  hpardiso.hpp  interface.hpp  interfaceOperatorB.hpp  interfaceOperatorG.hpp  linearAlgebra.hpp  mesh.hpp  operatorG.hpp  solver.hpp  stiffnessMatrix.hpp  types.hpp
python/: FEM_assembler.py  FEM_launch.py  FEM_launchWithTxtInpFiles.py  cholesky.py  choleskyFullPiv.py  launchHDD.py  launcherWithTxtInpFiles.py  readCOO.py  singularCholesky.py
python-wrapper/: FEM_launch.py  FEM_meshgenerator.py  HddApi.pxd  HddApi.pyx  REDME  hddConf.json  launcherWithTxtInpFiles.py  setup.py  setup.sh  srclibs
src/: data.cpp  directSolver.cpp  domain.cpp  element.cpp  hddApi.cpp  hddTime.cpp  hmpi.cpp  hpardiso.cpp  interface.cpp  interfaceOperatorB.cpp  interfaceOperatorG.cpp  linearAlgebra.cpp  mesh.cpp  solver.cpp  stiffnessMarix.cpp
